--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
+     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <nav>
@@ -19,7 +20,7 @@
     </main>
 
     <section>
-        
+
     </section>
 </body>
 </html>
