--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
     </nav>
 
-    <header>
-
-    </header>
+    <header class="bg-white py-16 shadow">
+    <div class="container mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-2">Bem-vindo ao Meu Site de Teste</h2>
+      <p class="text-gray-600">Este projeto é um teste prático com GitHub e Pull Requests.</p>
+    </div>
+  </header>
 
     <main>
 
