--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
     </header>
 
-    <main>
-
+    <main class="container mx-auto py-12 px-4">
+    <h3 class="text-2xl font-semibold mb-4">Objetivo do Projeto</h3>
+    <p class="text-gray-700 leading-relaxed">
+      Este site está sendo usado para praticar colaboração em equipe usando Git e GitHub. A ideia é que outras pessoas possam contribuir com melhorias por meio de Pull Requests.
+    </p>
     </main>
 
     <section>
