--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 
     </main>
 
-    <section>
-        
-    </section>
+  <section class="bg-blue-100 py-10 px-4">
+    <div class="container mx-auto">
+      <h3 class="text-xl font-semibold mb-4">O que pode ser feito?</h3>
+      <ul class="list-disc pl-6 text-gray-800 space-y-2">
+        <li>Adicionar novas seções ou componentes</li>
+        <li>Melhorar o design com Tailwind</li>
+        <li>Corrigir erros ou refatorar o código</li>
+        <li>Incluir imagens, links ou animações</li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
