--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <title>Teste</title>
      <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<!-- Animações com Tailwind (caso esteja usando Tailwind com plugins de animação) -->
+<style>
+  @keyframes fade-in-down {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fade-in-up {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-in-down {
+    animation: fade-in-down 0.8s ease-out forwards;
+  }
+
+  .animate-fade-in-up {
+    animation: fade-in-up 0.8s ease-out forwards;
+  }
+</style>
 <body>
     <nav class="bg-gray-800 text-white p-4">
     <div class="container mx-auto flex justify-between items-center">
@@ -18,12 +50,16 @@
     </div>
   </nav>
 
-    <header class="bg-white py-16 shadow">
-    <div class="container mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-2">Bem-vindo ao Meu Site de Teste</h2>
-      <p class="text-gray-600">Este projeto é um teste prático com GitHub e Pull Requests.</p>
-    </div>
-  </header>
+    <header class="bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500 py-20 shadow-lg text-white relative overflow-hidden">
+  <div class="container mx-auto text-center px-4">
+    <h2 class="text-4xl md:text-5xl font-extrabold mb-4 animate-fade-in-down">
+      Bem-vindo ao Meu Site de Teste
+    </h2>
+    <p class="text-lg md:text-xl text-white/90 animate-fade-in-up">
+      Este projeto é um teste prático com GitHub e Pull Requests.
+    </p>
+  </div>
+</header>
 
     <main class="container mx-auto py-12 px-4">
     <h3 class="text-2xl font-semibold mb-4">Objetivo do Projeto</h3>
